--- a/demo/Gemfile
+++ b/demo/Gemfile
@@ -1,6 +1,7 @@
 source 'https://rubygems.org'
 
 gem 'rails', '~> 3.2.1'
+gem 'therubyracer'
 gem 'socialization', :path => '../'
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
