--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -9,9 +9,9 @@ name: Ruby
 
 on:
   push:
-    branches: [ main ]
+    branches: "*"
   pull_request:
-    branches: [ main ]
+    branches: "*"
 
 jobs:
   rspec:
